syntax = "proto3";
package relay;

message ClientConfig {
  string client_id = 1;
  string endpoint = 2;  // e.g., "https://example.com/375fb8358438f5e16a6aeab5"
}

message GetConfigRequest {}
message GetConfigResponse {
  ClientConfig config = 1;
}

// Client certificate information (if mTLS is used)
message ClientCertificate {
  bytes certificate_der = 1;  // DER-encoded certificate
  string subject = 2;         // Certificate subject DN
  string issuer = 3;          // Certificate issuer DN
  string serial_number = 4;   // Certificate serial number (hex)
}

message HttpRequest {
  string request_id = 1;
  string method = 2;
  string path = 3;
  map<string, string> headers = 4;
  bytes body = 5;
  string query = 6;
  optional ClientCertificate client_certificate = 7;  // Present if client provided a certificate
}

message HttpResponse {
  string request_id = 1;
  uint32 status_code = 2;
  map<string, string> headers = 3;
  bytes body = 4;
}

service RelayService {
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc DoWebhook(stream HttpResponse) returns (stream HttpRequest);
}
